--- a/site/src/pages/index.module.css
+++ b/site/src/pages/index.module.css
@@ -2165,6 +2165,7 @@
 /* Final CTA */
 .finalCTA {
   padding: var(--section-spacing-xl) 0;
+  margin-top: -4rem;
   margin-bottom: 4rem;
   text-align: center;
   background: transparent;
